feat: Complete Evently Backend deployment setup
- Add Vercel configuration and serverless function setup
- Configure Swagger UI documentation
- Add TypeScript build configuration
- Update package.json for production deployment
- Add public directory with API landing page
- Include environment template for production
- Remove sensitive files from version control
- Complete backend API with authentication and event management

--- a/evently-backend/.gitignore
+++ b/evently-backend/.gitignore
@@ -18,6 +18,7 @@ out/
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 # Prisma
 prisma/migrations/
@@ -50,3 +51,4 @@ ehthumbs.db
 Thumbs.db
 
 /generated/prisma
+.vercel
