--- a/evently-backend/vercel.json
+++ b/evently-backend/vercel.json
@@ -5,18 +5,22 @@
       "maxDuration": 30
     }
   },
-  "routes": [
-    {
-      "src": "/api-docs(.*)",
-      "dest": "/api/index.ts"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.ts"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
-  ]
+"routes": [
+  {
+    "src": "/api-docs(.*)",
+    "dest": "/api/index.ts"
+  },
+  {
+    "src": "/swagger.json",
+    "dest": "/api/index.ts"
+  },
+  {
+    "src": "/api/(.*)",
+    "dest": "/api/index.ts"
+  },
+  {
+    "src": "/(.*)",
+    "dest": "/public/$1"
+  }
+]
 }
