refactor: remove TYPES_REFACTORING_SUMMARY.md and consolidate type definitions
refactor: update api/index.ts to export from src/index.ts

chore: change main entry point in package.json to src/index.ts

feat: enhance prisma schema with event_feedback and event_participants models

fix: update passport configuration to use correct user model

refactor: restructure index.ts for better organization and Vercel compatibility

fix: update auth middleware to reference the correct user model

fix: modify authRoutes to use the correct user model and improve OAuth URL handling

fix: update eventRoutes to reference new model names and improve query logic

fix: update userRoutes to reflect changes in user model and relationships

chore: improve prisma client logging based on environment

chore: adjust tsconfig.json for better module resolution and include paths

chore: update vercel.json for improved function configuration and environment variables

fix: update frontend auth callback to use window.location for navigation

fix: update frontend API base URL to point to production

--- a/evently-backend/package.json
+++ b/evently-backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "evently-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "NODE_ENV=production node dist/index.js",
     "vercel-build": "prisma generate && tsc",
     "postinstall": "prisma generate",
     "db:push": "prisma db push",
