--- a/evently-backend/.env.production.template
+++ b/evently-backend/.env.production.template
@@ -10,8 +10,10 @@ JWT_SECRET="your-production-jwt-secret-here"
 SESSION_SECRET="your-production-session-secret-here"
 
 # Google OAuth
+# Make sure these match your Google Console configuration
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
+# IMPORTANT: This must exactly match the URL in your Google Console
 GOOGLE_CALLBACK_URL="https://your-vercel-app.vercel.app/api/auth/google/callback"
 
 # Frontend URL
