chore: migrate CI from npm to pnpm for dependency management

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,17 +21,35 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: './evently-backend/package-lock.json'
+      
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: '10.12.1'
+          run_install: false
+      
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install
       
       - name: Generate Prisma Client
         run: npx prisma generate
       
       - name: Build backend
-        run: npm run build
+        run: pnpm build
   
   frontend:
     runs-on: ubuntu-latest
@@ -70,9 +88,6 @@ jobs:
       
       - name: Install dependencies
         run: pnpm install
-      
-      - name: Lint frontend
-        run: pnpm lint
       
       - name: Build frontend
         run: pnpm build
