--- a/evently-backend/package.json
+++ b/evently-backend/package.json
@@ -12,6 +12,7 @@
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
+    "seed": "ts-node prisma/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -48,6 +49,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/swagger-ui-dist": "^3.30.5",
     "prisma": "^6.9.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "vercel": "^43.1.0"
