--- a/evently-backend/package.json
+++ b/evently-backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "NODE_ENV=production node dist/src/index.js",
     "vercel-build": "prisma generate && tsc",
     "postinstall": "prisma generate",
     "db:push": "prisma db push",
