feat: Add CI/CD pipeline configuration and testing for Evently frontend
- Created CI/CD pipeline documentation with testing and deployment guidelines.
- Implemented Jest configuration for unit testing with coverage reports.
- Added mock for static assets in tests.
- Developed comprehensive test suite for login functionality, including validation and API interaction.
- Included scenarios for edge cases in login, such as special characters and case sensitivity.

--- a/evently-frontend/package.json
+++ b/evently-frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:ci": "jest --watchAll=false --coverage --ci",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:function": "jest register.function.test.js",
@@ -67,11 +68,9 @@
     "zod": "^3.25.64"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.27.1",
     "@playwright/test": "^1.49.0",
+    "@swc/core": "^1.12.5",
+    "@swc/jest": "^0.2.38",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -79,8 +78,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^10.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
