--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,7 @@ jobs:
         env:
           CI: true
           NODE_ENV: test
+          NEXT_PUBLIC_API_BASE_URL: http://localhost:3001/api
       
       - name: Test Results Summary
         if: always()
@@ -115,3 +116,5 @@ jobs:
       
       - name: Build frontend
         run: pnpm build
+        env:
+          NEXT_PUBLIC_API_BASE_URL: http://localhost:3001/api
