--- a/evently-frontend/package.json
+++ b/evently-frontend/package.json
@@ -54,13 +54,16 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.18.1",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.57.0",
+    "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^3.0.2",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
