Fix: add --confirm flag to Vercel deployment to avoid prompts

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -72,4 +72,4 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           vercel-project-name: evently
           working-directory: ./evently-frontend
-          vercel-args: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && '--prod' || '' }}
+          vercel-args: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && '--prod --confirm' || '--confirm' }}
