--- a/evently-frontend/vercel.json
+++ b/evently-frontend/vercel.json
@@ -14,23 +14,23 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_URL": "@next_public_api_url",
-    "NEXT_PUBLIC_API_BASE_URL": "@next_public_api_base_url",
-    "NEXTAUTH_SECRET": "@nextauth_secret",
-    "NEXTAUTH_URL": "@nextauth_url",
-    "GOOGLE_CLIENT_ID": "@google_client_id",
-    "GOOGLE_CLIENT_SECRET": "@google_client_secret",
-    "DATABASE_URL": "@database_url"
+    "NEXT_PUBLIC_API_URL": "${NEXT_PUBLIC_API_URL}",
+    "NEXT_PUBLIC_API_BASE_URL": "${NEXT_PUBLIC_API_BASE_URL}",
+    "NEXTAUTH_SECRET": "${NEXTAUTH_SECRET}",
+    "NEXTAUTH_URL": "${NEXTAUTH_URL}",
+    "GOOGLE_CLIENT_ID": "${GOOGLE_CLIENT_ID}",
+    "GOOGLE_CLIENT_SECRET": "${GOOGLE_CLIENT_SECRET}",
+    "DATABASE_URL": "${DATABASE_URL}"
   },
   "build": {
     "env": {
-      "NEXT_PUBLIC_API_URL": "@next_public_api_url",
-      "NEXT_PUBLIC_API_BASE_URL": "@next_public_api_base_url",
-      "NEXTAUTH_SECRET": "@nextauth_secret",
-      "NEXTAUTH_URL": "@nextauth_url",
-      "GOOGLE_CLIENT_ID": "@google_client_id",
-      "GOOGLE_CLIENT_SECRET": "@google_client_secret",
-      "DATABASE_URL": "@database_url"
+      "NEXT_PUBLIC_API_URL": "${NEXT_PUBLIC_API_URL}",
+      "NEXT_PUBLIC_API_BASE_URL": "${NEXT_PUBLIC_API_BASE_URL}",
+      "NEXTAUTH_SECRET": "${NEXTAUTH_SECRET}",
+      "NEXTAUTH_URL": "${NEXTAUTH_URL}",
+      "GOOGLE_CLIENT_ID": "${GOOGLE_CLIENT_ID}",
+      "GOOGLE_CLIENT_SECRET": "${GOOGLE_CLIENT_SECRET}",
+      "DATABASE_URL": "${DATABASE_URL}"
     }
   },
   "installCommand": "pnpm install",
