--- a/evently-frontend/vercel.config.json
+++ b/evently-frontend/vercel.config.json
@@ -3,9 +3,7 @@
   "public": false,
   "github": {
     "enabled": true,
-    "silent": true
-  },
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
+    "silent": false,
+    "autoAlias": true
+  }
 }
