Add permissions to GitHub workflow for PR comments

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -11,6 +11,13 @@ on:
       - 'evently-frontend/**'
   workflow_dispatch:
 
+# Add permissions needed for GitHub API operations
+permissions:
+  contents: read
+  pull-requests: write
+  issues: write
+  repository-projects: write
+
 jobs:
   test:
     name: Test
