--- a/evently-frontend/.eslintrc.json
+++ b/evently-frontend/.eslintrc.json
@@ -3,6 +3,10 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
-    "react-hooks/exhaustive-deps": "warn"
+    "react-hooks/exhaustive-deps": "warn",
+    "react/no-unescaped-entities": "warn",
+    "@next/next/no-img-element": "warn",
+    "react-hooks/rules-of-hooks": "error",
+    "@typescript-eslint/no-require-imports": "warn"
   }
 }
